[package]
name = "bitbucket-server-rs"
description = "An API client library for Bitbucket Data Center"
version = "0.3.0"
edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/acfabro/bitbucket-server-rs"
readme = "README.md"

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
reqwest = { version = "0.12.12", features = ["json"] }
serde_json = "1.0.138"
chrono = { version = "0.4.39", features = ["serde"] }
log = "0.4.25"
env_logger = "0.11.6"
derive_builder = "0.20.2"

[dev-dependencies]
tokio = { version = "1.43.0", features = ["full"] }
httpmock = "0.7.0"
