[package]
name = "bitbucket-server-rs"
description = "An API client library for Bitbucket Data Center"
version = "0.5.1"
edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/acfabro/bitbucket-server-rs"
readme = "README.md"
documentation = "https://docs.rs/bitbucket-server-rs"
keywords = ["bitbucket", "api", "client", "rest", "atlassian"]
categories = ["api-bindings", "web-programming::http-client"]

# docs.rs configuration
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
reqwest = { version = "0.12.12", features = ["json"] }
serde_json = "1.0.138"
chrono = { version = "0.4.39", features = ["serde"] }
env_logger = "0.11.6"
derive_builder = "0.20.2"
thiserror = "2.0.12"

[dev-dependencies]
tokio = { version = "1.43.0", features = ["full"] }
httpmock = "0.7.0"
